--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       }
     </style>
   </head>
+  <meta name="viewport" content="width=device-width">
   <body>
     <a href="https://pcms-canteen01.netlify.app/" class="button1">肚子餓了</a>
-    <a href="https://pcms-canteen02.netlify.app/" class="button1"我吃飽了></a>
+    <a href="https://pcms-canteen02.netlify.app/" class="button1">我吃飽了></a>
   </body>
 </html>
 <!DOCTYPE html>
