--- a/index.html
+++ b/index.html
@@ -7,20 +7,34 @@
         background-color: #1c87c9;
         border: none;
         color: white;
-        padding: 20px 34px;
+        padding: 2em;
         text-align: center;
         text-decoration: none;
         display: inline-block;
         font-size: 20px;
-        margin: 4px 2px;
+        margin: auto;
+        cursor: pointer;
+      }
+    </style>
+     <style>
+      .button2 {
+        background-color: #adfbe0;
+        border: none;
+        color: white;
+        padding: 2em;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        margin: auto;
         cursor: pointer;
       }
     </style>
   </head>
-  <meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width">
   <body>
     <a href="https://pcms-canteen01.netlify.app/" class="button1">肚子餓了</a>
-    <a href="https://pcms-canteen02.netlify.app/" class="button1">我吃飽了></a>
+    <a href="https://pcms-canteen02.netlify.app/" class="button2">我吃飽了></a>
   </body>
 </html>
 <!DOCTYPE html>
