--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <meta name="viewport" content="width=device-width">
   <body>
     <a href="https://pcms-canteen01.netlify.app/" class="button1">肚子餓了</a>
-    <a href="https://pcms-canteen02.netlify.app/" class="button2">我吃飽了></a>
+    <a href="https://pcms-canteen02.netlify.app/" class="button2">我吃飽了</a>
   </body>
 </html>
 <!DOCTYPE html>
