--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         text-decoration: none;
         display: inline-block;
         font-size: 20px;
-        margin: auto;
         cursor: pointer;
       }
-    </style>
-     <style>
+
       .button2 {
         background-color: #adfbe0;
         border: none;
@@ -26,9 +24,16 @@
         text-decoration: none;
         display: inline-block;
         font-size: 20px;
-        margin: auto;
         cursor: pointer;
       }
+
+    body {
+    margin: auto;
+    padding: 1em;
+    max-width: 700px;
+    background: white;
+    colour: #222;    
+       }
     </style>
   </head>
 <meta name="viewport" content="width=device-width">
