--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title of the document</title>
+    <title>培正飯堂</title>
     <style>
       .button1 {
         background-color: #1c87c9;
