--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
 
       .button2 {
-        background-color: #adfbe0;
+        background-color: #000000;
         border: none;
         color: white;
         padding: 2em;
