--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
         font-size: 20px;
         cursor: pointer;
       }
+      
+      @import url('https://fonts.googleapis.com/css?family=Orbitron');
+#clock {
+  font-family: 'Orbitron', sans-serif;
+  color: #66ff99;
+  font-size: 56px;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
 
     body {
     margin: auto;
@@ -35,12 +45,39 @@
     colour: #222;    
        }
     </style>
+    <script>
+  function currentTime() {
+  var date = new Date(); /* creating object of Date class */
+  var hour = date.getHours();
+  var min = date.getMinutes();
+  var sec = date.getSeconds();
+  hour = updateTime(hour);
+  min = updateTime(min);
+  sec = updateTime(sec);
+  document.getElementById("clock").innerText = hour + " : " + min + " : " + sec; /* adding time to the div */
+    var t = setTimeout(function(){ currentTime() }, 1000); /* setting timer */
+}
+
+function updateTime(k) {
+  if (k < 10) {
+    return "0" + k;
+  }
+  else {
+    return k;
+  }
+}
+
+currentTime(); /* calling currentTime() function to initiate the process */
+    </script>
   </head>
 <meta name="viewport" content="width=device-width">
   <body>
     <a href="https://pcms-canteen01.netlify.app/" class="button1">肚子餓了</a>
     <a href="https://pcms-canteen02.netlify.app/" class="button2">我吃飽了</a>
   </body>
+  <footer>
+  <div id="clock"></div>
+  </footer>
 </html>
 <!DOCTYPE html>
     
