--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <link rel="icon" type="image/png" href="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg"/>
     <title>培正飯堂</title>
     <style>
       .button1 {
