--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
     <title>培正飯堂</title>
     <style>
       .button1 {
-        background-color: #1c87c9;
-        border: none;
-        color: white;
-        padding: 2em;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 20px;
-        cursor: pointer;
+        .button {
+  display: inline-block;
+  padding: 2em;
+  font-size: 20px;
+  cursor: pointer;
+  text-align: center;   
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
       }
 
       .button2 {
