--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 }
 
 
-.button:hover {background-color: #3e8e41}
+.button1:hover {background-color: #3e8e41}
 
-.button:active {
+.button1:active {
   background-color: #3e8e41;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
