--- a/index.html
+++ b/index.html
@@ -30,15 +30,28 @@
       }
 
       .button2 {
-        background-color: #000000;
-        border: none;
-        color: white;
-        padding: 2em;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 20px;
-        cursor: pointer;
+  display: inline-block;
+  padding: 2em;
+  font-size: 20px;
+  cursor: pointer;
+  text-align: center;   
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+
+.button2:hover {background-color: #3e8e41}
+
+.button2:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
       }
       
     body {
