--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </head>
 
   <body>
-    <img class="button" src="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg" width=device-width >
+    <img class="button" src="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg" width="device-width" >
     <a href="https://pcms-canteen01.netlify.app/" class="button1">肚子餓了</a>
     <a href="https://pcms-canteen02.netlify.app/" class="button2">我吃飽了</a>
   
