--- a/index.html
+++ b/index.html
@@ -4,20 +4,6 @@
       <meta name="viewport" content="width=device-width">
      <link rel="icon" type="image/png" href="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg"/>
     <title>培正飯堂</title>
-    <style type="text/css">
-	img.button {
-    opacity: 0.6;
-    transition: opacity 1s ease-in-out;
-    -moz-transition: opacity 1s ease-in-out;
-    -webkit-transition: opacity 1s ease-in-out;
-	}
-	img.button:hover {
-		opacity: 1.0;
-		transition: opacity .55s ease-in-out;
-		-moz-transition: opacity .55s ease-in-out;
-		-webkit-transition: opacity .55s ease-in-out;
-	}
-	</style>
     <style>
       .button1 {
   display: inline-block;
@@ -80,7 +66,33 @@
   </head>
 
   <body>
-    <img class="button" src="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg" width="230" height="230" >
+    <img class="anim_fade_image" src="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg" width="240" height="240">
+<img src="https://user-images.githubusercontent.com/70761288/101173924-29343a80-367e-11eb-931e-279f4b98b479.png" width="240" height="240">
+<style>@-webkit-keyframes fadeInOut {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+}
+
+.anim_fade_image {
+  position: absolute;
+  -webkit-animation-name: fadeInOut;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 12s;
+  -webkit-animation-direction: alternate;
+}
+img{ width:400px;}
+</style>
     <a href="https://pcms-canteen01.netlify.app/" class="button1">肚子餓了</a>
     <a href="https://pcms-canteen02.netlify.app/" class="button2">我吃飽了</a>
   
