--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   </head>
 
   <body>
-    <img class="anim_fade_image" src="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg" width="device-width" height="400">
-<img src="https://user-images.githubusercontent.com/70761288/101173924-29343a80-367e-11eb-931e-279f4b98b479.png" width="device-width" height="400">
+    <img class="anim_fade_image" src="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg" width="auto" height="400">
+<img src="https://user-images.githubusercontent.com/70761288/101173924-29343a80-367e-11eb-931e-279f4b98b479.png" width="auto" height="400">
 <style>@-webkit-keyframes fadeInOut {
   0% {
     opacity: 1;
