--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <meta name="viewport" content="width=device-width">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="icon" type="image/png" href="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg"/>
     <title>培正飯堂</title>
+        
     <style>
       .button1 {
   display: inline-block;
@@ -66,8 +67,8 @@
   </head>
 
   <body>
-    <img class="anim_fade_image" src="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg" width="auto" height="400">
-<img src="https://user-images.githubusercontent.com/70761288/101173924-29343a80-367e-11eb-931e-279f4b98b479.png" width="auto" height="400">
+    <img class="anim_fade_image" src="https://i.pinimg.com/originals/e8/d7/a8/e8d7a8e2533426f1b9f64e8d636c482f.jpg">
+<img src="https://user-images.githubusercontent.com/70761288/101173924-29343a80-367e-11eb-931e-279f4b98b479.png" >
 <style>@-webkit-keyframes fadeInOut {
   0% {
     opacity: 1;
@@ -91,7 +92,8 @@
   -webkit-animation-duration: 12s;
   -webkit-animation-direction: alternate;
 }
-img{ width:400px;}
+img{ width: 100%;
+  height: auto;}
 </style>
     <a href="https://pcms-canteen01.netlify.app/" class="button1">肚子餓了</a>
     <a href="https://pcms-canteen02.netlify.app/" class="button2">我吃飽了</a>
