--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
   -webkit-animation-duration: 12s;
   -webkit-animation-direction: alternate;
 }
-img{ width: 100%;
-  height: auto;}
+img{ width: 230px;
+  height: 230px;}
 </style>
     <a href="https://pcms-canteen01.netlify.app/" class="button1">肚子餓了</a>
     <a href="https://pcms-canteen02.netlify.app/" class="button2">我吃飽了</a>
