--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   text-decoration: none;
   outline: none;
   color: #fff;
-  background-color: #4CAF50;
+  background-color: #ff0200;
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #999;
 }
 
 
-.button1:hover {background-color: #3e8e41}
+.button1:hover {background-color: #aa0200}
 
 .button1:active {
-  background-color: #3e8e41;
+  background-color: #aa0200;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
