--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
   text-decoration: none;
   outline: none;
   color: #fff;
-  background-color: #0000ff;
+  background-color: #192a95;
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #999;
 }
 
 
-.button2:hover {background-color: #00006c}
+.button2:hover {background-color: #192a62}
 
 .button2:active {
-  background-color: #00006c;
+  background-color: #192a62;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
