--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     margin: auto;
     padding: 1em;
     max-width: 700px;
-    background: #fffff9;
+    background: #faf5e1;
     colour: #222;    
        }
     </style>
