--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ img{ width: 340px;
     top: 80%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    color: #17D4FE;
+    color: #573e00;
     font-size: 50px;
     font-family: Orbitron;
     letter-spacing: 7px;
