--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </head>
 
   <body>
-    <img class="anim_fade_image" src="https://user-images.githubusercontent.com/70761288/104493302-d3a16500-560f-11eb-9662-96544d393e56.JPG">
+    <img class="anim_fade_image" src="https://user-images.githubusercontent.com/70761288/113152402-ad7f7e80-9268-11eb-8888-60f4e0c0abeb.jpg">
 <img src="https://user-images.githubusercontent.com/70761288/101173924-29343a80-367e-11eb-931e-279f4b98b479.png" >
 <style>@-webkit-keyframes fadeInOut {
   0% {
